--- a/css/style.css
+++ b/css/style.css
@@ -4,31 +4,55 @@ body {
     margin: auto;
     text-align: center;
     padding-top: 150px;
-    font-size: 16px;
-    line-height: 24px;
 }
-
-h1, h2, h3 {
-    line-height: auto;
+body:not(.index) {
+    padding-top: 60px;
+    text-align: left;
 }
-
-input[type=text]:focus {
-    outline: solid 2px rgba(0,0,0, 0.2);
+body:not(.index) h1, .wrap h3 {
+    text-align: center;
 }
-
 input[type=text] {
     padding: 5px;
+    text-transform: uppercase;
 }
-
+input[type=text]:focus {
+    outline: solid 2px rgba(0,0,0, 0.2)
+}
+::-webkit-input-placeholder {
+    text-transform: capitalize
+}
+:-moz-placeholder {
+    text-transform: capitalize
+}
+::-moz-placeholder {
+    text-transform: capitalize
+}
+:-ms-input-placeholder {
+    text-transform: capitalize
+}
 button {
-    padding-top: 2px;
+    padding-top: 2px
 }
-
 ol {
-    margin-top: 0;
-    padding-top: 0;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
-
+ol li {
+    display: inline;
+    padding: 0;
+    line-height: 30px;
+}
+ol li:after {
+    content: ', ';
+}
+ol li:last-child:after {
+    content: '.';
+}
+ol li:last-child:before {
+    content: 'and ';
+}
 .pure-grid {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -36,42 +60,92 @@ ol {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
 }
-
 .pure-grid:first-child {
-    padding-right: 5px;
+    padding-right: 5px
 }
-
 .pure-grid:last-child {
-    padding-left: 5px;
+    padding-left: 5px
 }
-
 .schools a {
     color: #4d4dff;
     text-decoration: none;
     border-bottom: 1px dotted #4d4dff;
     transition: all 0.3s;
 }
-
 .schools a:hover {
     color: #0000b3;
     border-bottom-color: #0000b3;
 }
-
 .schools a, .schools li {
-    padding: 5px;
+    padding: 5px
 }
-
-@media all and (max-width:800px){
+@media all and (max-width:800px) { 
     .index {
-        padding-top: 60px;
+        padding-top: 60px
     }
-    
     .schools li {
-        line-height: 30px;
+        line-height: 30px
     }
-    
+}
+@media all and (max-width:400px) { 
     .pure-grid:first-child, .pure-grid:last-child {
         padding-left: 0;
         padding-right: 0;
     }
+}
+a:not([href]) {
+    cursor: text
+}
+a.hidden {
+    cursor: pointer;
+}
+.navbar div:nth-child(2) {
+    margin: 0 auto;
+    position: relative;
+}
+.navbar div:nth-child(1) {
+    position: absolute;
+    top: 0;
+}
+.navbar a:not(#logo-link) {
+    text-decoration: none;
+    padding: 15px;
+    background-color: black;
+    color: white;
+}
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 14px;
+    background-color: black;
+    white-space: nowrap;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+}
+.navbar a:not(#logo-link):hover {
+    background-color: white;
+    color: black;
+}
+.navbar a:not(#logo-link):not(:nth-child(2)):not(.hidden) {
+    margin-left: -8px;
+}
+.container {
+    background: white;
+    width: 400px;
+    margin: 0 auto;
+}
+.hidden {
+    display: none;
+}
+.navbar a.hide {
+    right: 0;
+    position: absolute;
+}
+#logo-img {
+    cursor: pointer;
+}
+#school img {
+    max-width: 100%;
 }
