Third day commit - YRS2013. Minor bug fixes and UI changes. Also added geolocation API.

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ input[type=text] {
 .loading-gif, .error-p {
     display: none;
 }
-.error-p {
+.error-p, .ie-message {
     color: #b94a48;
 }
 .geo-p {
