--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,16 @@ ol li:last-child:before {
 .pure-grid:last-child {
     padding-left: 5px
 }
+.interactive-map {
+	width: 100%;
+	height: 300px;
+}
+.marker-content {
+    line-height:1.35;
+    overflow:hidden;
+    white-space:nowrap;
+    font-weight: bold;
+}
 #ofsted a, .creators a, .libraries a, .footer-wrap a {
     color: #4d4dff;
     text-decoration: none;
